Fix NET Bible error "You have been blocked"
https://github.com/bibledit/cloud/issues/974
The fix consists of two changes:
1. Update the Net Bible URL, in other words, fetch the data from another web address.
2. While fetching data exactly mimic the Chrome browser. This should make Cloudflare not detect that this is a scraper.

--- a/Makefile.am
+++ b/Makefile.am
@@ -584,7 +584,6 @@ unittest_SOURCES = \
 	unittests/http.cpp \
 	unittests/memory.cpp \
 	unittests/tasks.cpp \
-	unittests/biblegateway.cpp \
 	unittests/rss.cpp \
 	unittests/space.cpp \
 	unittests/roles.cpp \
@@ -638,11 +637,9 @@ unittest_SOURCES = \
 	unittests/french.cpp \
   unittests/merge.cpp \
   unittests/html2format.cpp \
-  unittests/studylight.cpp \
-  unittests/gbs.cpp \
   unittests/bibleimages.cpp \
   unittests/image.cpp \
-  unittests/easyenglishbible.cpp
+  unittests/scraper.cpp
 
 unittest_LDADD = libbibledit.a
 
